resources/public/style.css
/* ... */
.no-border {
    border: none !important;
}

.halves {
    display: flex;
    flex-wrap: wrap;
    min-width: 50vw;
}

.halves .side {
    flex: 1 0 50%;
}

.chat-lookup-side {
    max-height: calc(88vh - 30px);
    overflow: auto;
}

.no-p-margin p {
    margin: 0 !important;
}

/*//////////////////////////*\
| Overlays
\*\\\\\\\\\\\\\\\\\\\\\\\\\\*/

#reconnecting {
    position: fixed;
    display: none;
    top: 0;
    left: 0;
    z-index: 98;
    width: 100vw;
    background: #333;
    text-align: center;
    margin: 0;
    padding: 20px;
    font-weight: 800;
    color: #fff;
    font-size: 25px;
}

#loading {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-color: #444;
    z-index: 999;
}

#loading span {
    text-align: center;
    font-size: 36px;
    color: white;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

#prompt, #signup {
    z-index: 99;
}

#signup-discord-input {
    display: block;
    width: 100%;
    margin-top: 5px;
}

#messages {
    position: fixed;
    z-index: 22;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    pointer-events: none;
}

#messages .message {
    pointer-events: all;
    word-wrap: break-word;
    overflow-wrap: break-word;
}

.floating-panel {
    border-radius: 8px;
    border: 1px solid var(--floating-panel-border-color);
    background: var(--floating-panel-background);
    color: var(--floating-panel-text-color);
    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
    padding: 16px;
    max-width: 320px;
    word-wrap: break-word;
}

.floating-panel .content {
    margin-bottom: 5px;
}

.floating-panel .content > div:not(:first-of-type) {
    margin-top: 5px;
}

#lookup {
    position: fixed;
    top: 50px;
    right: 16px;
    z-index: 22;
}

/* moderator action popup styles */
.chatmod-container th {
    text-align: right;
    margin-right: .25rem;
}

.chatmod-container th[title] {
    border-bottom: 1px dashed #666;
}

.chatmod-container h3 {
    text-align: center;
}

.chatmod-container h5 {
    margin-left: -1.25rem;
}

.chatmod-container textarea {
    width: 100%;
    border: 1px solid #999;
}

.chatmod-container input[type=text] {
    width: 100%;
}

.chatmod-container label:not(.inline) {
    display: block;
}

.chatmod-container select, .chatmod-container input:not([type=check]):not([type=radio]) {
    display: block;
    width: 100%;
    padding: 5px;
    border: 1px solid #999;
    font-family: monospace;
    font-size: 1.5rem;
    border-radius: 3px;
}

.buttons {
    text-align: right;
}

#drag-drop-target {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: 100;
}

#drag-drop {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    z-index: 100;

    background: var(--bubble-background);
    color: var(--bubble-text-color);
    pointer-events: none;
    font-size: 32px;
    text-shadow: 0 0 5px black;
    border-radius: 5px;
    padding: 15px;
}

#drag-drop-exit {
    position: absolute;
    left: 50%;
    top: 60%;
    transform: translate(-50%, -50%);
    z-index: 100;

    background: var(--bubble-background);
    color: var(--bubble-text-color);
    font-size: 16px;
    text-shadow: 0 0 5px black;
    border-radius: 5px;
    padding: 7px;
}

#template-file-selector {
    margin: 5px 0;
}

/*//////////////////////////*\
| UI
\*\\\\\\\\\\\\\\\\\\\\\\\\\\*/

#ui {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    transition: left ease-in-out .25s, right ease-in-out .25s;
    user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -webkit-user-select: none;
    pointer-events: none;
    cursor: default;
    z-index: 9;
    display: flex;
    flex-direction: column;
}

#ui > * {
    position: relative;
    pointer-events: none;
}

#ui > * > * {
    pointer-events: all;
}

#ui .bubble {
    position: absolute;
    display: inline-block;
    padding: 0.5em 1em;
    background: var(--bubble-background);
    border-radius: 5px;
    color: var(--bubble-text-color);
}

#ui-top {
    height: 100%;
}

#ui #loading-bubble.bubble {
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: rgba(251, 106, 0, 0.7);
    display: none;
}

#ui #loading-bubble .loading-bubble-item {
    display: none;
}

#main-bubble[position~="top"] {
    top: 4rem;
    padding-bottom: 1em;
}

#main-bubble[position~="left"] {
    left: 1rem;
}

#main-bubble[position~="bottom"] {
    bottom: 1rem;
    padding-top: 1em;
}

#main-bubble[position~="right"] {
    right: 1rem;
}

#main-bubble a {
    pointer-events: auto;
}

#main-bubble .fas {
    width: 1.25em;
    text-align: center;
}

#main-bubble.compact .toggeable {
    /* don't hide it completely to keep their width */
    margin: 0;
    padding: 0;
    overflow: hidden;
    height: 0;
}

#main-bubble #setting-ui-bubble-compact {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
}

#main-bubble[position~="top"] #setting-ui-bubble-compact {
    top: initial;
    bottom: 0;
}

#main-bubble[position~="top"] #setting-ui-bubble-compact .fas,
#main-bubble.compact[position~="bottom"] #setting-ui-bubble-compact .fas {
    transform: rotate(180deg);
}

#main-bubble[position~="bottom"] #setting-ui-bubble-compact .fas,
#main-bubble.compact[position~="top"] #setting-ui-bubble-compact .fas {
    transform: rotate(0);
}

#pixel-counts .fas {
    vertical-align: top;
}

#pixel-counts > ul {
    margin: 0;
    padding: 0;
    list-style: none;
    display: inline-block;
}

#coords-info {
    margin-top: 16px;
    margin-bottom: 8px;
}

#ui-bottom {
    z-index: 6;
    width: 100%;
    left: 0;
}
/* ... */

